@@ -72,6 +72,43 @@
 
 	<build>
 		<plugins>
+		
+<plugin>
+
+<groupId>org.jvnet.jaxb2.maven2</groupId>
+
+<artifactId>maven-jaxb2-plugin</artifactId>
+<version> 0.8.3</version>
+<executions>
+
+<execution>
+
+<goals>
+
+<goal>generate</goal>
+
+</goals>
+
+</execution>
+
+</executions>
+
+</plugin>
+
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.12</version>
+    <configuration>
+        <junitArtifactName>junit:junit</junitArtifactName>
+        <encoding>UTF-8</encoding>
+        <inputEncoding>UTF-8</inputEncoding>
+        <outputEncoding>UTF-8</outputEncoding>
+        <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+        -Dfile.encoding=UTF-8</argLine>
+    </configuration>
+</plugin>
+
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
